Proposed changes for SPECPROC-16 - Change WORK_PLAN.top_level_plans and LINKED_PLAN.target to direct links.
Possible changes for DATASET classes.

--- a/docs/UML/class_index.adoc
+++ b/docs/UML/class_index.adoc
@@ -28,6 +28,8 @@
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_callback_wait_class[CALLBACK_WAIT^]
 [.xcode]
+* link:/releases/PROC/{proc_release}/task_planning.html#_capture_dataset_spec_class[CAPTURE_DATASET_SPEC^]
+[.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_choice_branch_class[CHOICE_BRANCH^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_choice_group_class[CHOICE_GROUP^]
@@ -163,6 +165,8 @@
 * link:/releases/PROC/{proc_release}/task_planning.html#_resume_action_class[RESUME_ACTION^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_resume_type_enumeration[RESUME_TYPE^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/task_planning.html#_review_dataset_spec_class[REVIEW_DATASET_SPEC^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_state_trigger_class[STATE_TRIGGER^]
 [.xcode]
