--- a/docs/task_planning/master00-amendment_record.adoc
+++ b/docs/task_planning/master00-amendment_record.adoc
@@ -6,16 +6,22 @@
 
 4+^h|*PROC Release 1.?.?*
 
-|[[latest_issue]]1.2.0
+|[[latest_issue]]1.3.0
+|{spec_tickets}/SPECPROC-xx[SPECPROC-xx^]. Improve model of capture and review data-sets. +
+ {spec_tickets}/SPECPROC-16[SPECPROC-16^]. Change `WORK_PLAN._top_level_plans_` and `LINKED_PLAN._target_` to direct links.
+|M Kejžar
+|[[latest_issue_date]]04 Jan 2019
+
+|1.2.0
 |{spec_tickets}/SPECPROC-15[SPECPROC-15^]. Convert `DELAY_EVENT._source_` to a direct reference.
 |M Polajnar 
-|[[latest_issue_date]]21 Nov 2018
+|21 Nov 2018
 
 |1.1.2
 |{spec_tickets}/SPECPROC-2[SPECPROC-2^]. Change date/time types to `Iso8601_xxx` types from Foundation Types spec. +
  {spec_tickets}/SPECPROC-11[SPECPROC-11^]. Add `WORK_PLAN._indications_`; +
  Improve documentation of `TIMELINE_MOMENT`; +
- {spec_tickets}/SPECPROC-13[SPECPROC-13^]. Clarify Work Plan instantiation and distribution semantics:
+ {spec_tickets}/SPECPROC-13[SPECPROC-13^]. Clarify Work Plan instantiation and distribution semantics: +
  Add section 4.4.1 Phases of Work; +
  Add subsection to section 2.5 on Distributed plans.
 |B Naess, +
