Add missed DATASET class documentation.

--- a/docs/UML/classes/review_dataset_spec.adoc
+++ b/docs/UML/classes/review_dataset_spec.adoc
@@ -6,7 +6,7 @@ h|*Class*
 2+^h|*REVIEW_DATASET_SPEC*
 
 h|*Description*
-2+a|
+2+a|Specification of a related data display data-set and/or form to use with a Task, usually by means display screens in an application being used by the principal performer.
 
 h|*Inherit*
 2+|`DATASET_SPEC`
