--- a/docs/UML/classes/dataset_spec.adoc
+++ b/docs/UML/classes/dataset_spec.adoc
@@ -3,7 +3,7 @@
 [cols="^1,3,5"]
 |===
 h|*Class*
-2+^h|*DATASET_SPEC*
+2+^h|*_DATASET_SPEC (abstract)_*
 
 h|*Description*
 2+a|Specification of a related data-set and/or form to use with a Task, usually by means of display and/or data entry screens in an application being used by the principal performer.
