--- a/docs/UML/classes/plan_timeline.adoc
+++ b/docs/UML/classes/plan_timeline.adoc
@@ -6,7 +6,7 @@ h|*Class*
 2+^h|*PLAN_TIMELINE*
 
 h|*Description*
-2+a|List of Plan Items that have a wait_condition containing an `AGENDA_MOMENT`, whose times will be converted at Plan activation to fixed times on an execution calendar.
+2+a|List of Plan Items that have a `_wait_condition_` containing an `TIMELINE_MOMENT`, whose times will be converted at Plan activation to fixed times on an execution calendar.
 
 h|*Attributes*
 ^h|*Signature*
