--- a/docs/UML/classes/resource_participation.adoc
+++ b/docs/UML/classes/resource_participation.adoc
@@ -8,7 +8,7 @@ h|*Class*
 h|*Description*
 2+a|Description of a resource with optional external system reference.
 
-TODO: explain external_ref.
+TODO: explain `_external_ref_`.
 
 h|*Attributes*
 ^h|*Signature*
