--- a/docs/tp_vml/master02-overview.adoc
+++ b/docs/tp_vml/master02-overview.adoc
@@ -10,5 +10,9 @@ image::{diagrams_uri}/TP-VML-palette.svg[id=tp_vml_palette, align="center"]
 
 The following files can be downloaded and then imported into draw.io as libraries to provide a working palette for TP-VML diagrams.
 
+* link:draw.io-lib/TP_VML2.xml[TP_VML2]
+
+Previous version of TP-VML:
+
 * link:draw.io-lib/TP-VML-main.xml[TP-VML main]
 * link:draw.io-lib/TP-VML-annotations.xml[TP-VML annotations]
