--- a/docs/tp_vml/master00-amendment_record.adoc
+++ b/docs/tp_vml/master00-amendment_record.adoc
@@ -6,9 +6,14 @@
 
 4+^h|*PROC Release 1.0.0*
 
-|[[latest_issue]]0.5.0
+|[[latest_issue]]0.6.0
+|Update to modelling shapes used in main specification.
+|T Beale
+|[[latest_issue_date]]20 Feb 2019
+
+|0.5.0
 |{spec_tickets}/SPECPROC-2[SPECPROC-2^] Initial Writing.
 |T Beale
-|[[latest_issue_date]]20 Oct 2017
+|20 Oct 2017
 
 |===
