--- a/docs/tp_vml/master03-elements.adoc
+++ b/docs/tp_vml/master03-elements.adoc
@@ -26,7 +26,7 @@ image::{diagrams_uri}/TP-VML-conditionals.svg[id=tp_vml_conditionals, align="cen
 
 [.text-center]
 .Tasks
-image::{diagrams_uri}/TP-VML-tasks.svg[id=tp_vml_tasks, align="center", width=70%]
+image::{diagrams_uri}/TP-VML-tasks.svg[id=tp_vml_tasks, align="center"]
 
 === Events
 
